db/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finether-ingress
  namespace: finether
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8001
          - path: /bank
            pathType: Prefix
            backend:
              service:
                name: bank-service
                port:
                  number: 8002
          - path: /accounts
            pathType: Prefix
            backend:
              service:
                name: accounts-service
                port:
                  number: 8003
